--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,4 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<title>Skidibidibop</title>
+
 <link rel="stylesheet" href="/Skidibidibop/assets/css/main.css">
