--- a/docs/_sass/_general.scss
+++ b/docs/_sass/_general.scss
@@ -6,10 +6,14 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgba(0,0,0,.2);
 }
 
 h1 {
   font-family: 'Major Mono Display', sans-serif;
   color: #33322e
 };
+
+p, a, span, h2, h3, h4, h5, h6 {
+  font-family: sans-serif;
+  color: #3a3a3a;
+}
